--- a/AvaloniaApplication1/MainWindow.xaml
+++ b/AvaloniaApplication1/MainWindow.xaml
@@ -1,5 +1,5 @@
 ﻿<Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="HW9Part2">
+        Title="AvaloniaApplication1">
     Hello World!
 </Window>
