The interface works, but the APIKey doesn't allow me to get data back from the web.

--- a/ClassLibrary1/MainWindow.xaml
+++ b/ClassLibrary1/MainWindow.xaml
@@ -116,6 +116,9 @@
               <TextBlock Grid.Column="1"
                          Grid.Row="5"
                          Text="{Binding DiedAt}" />
+              <Button Content="Save"
+                      Grid.Row="6"
+                      />
             </Grid>
           </Border>
         </Grid>
